# MCP-Template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
Docs/: MCP-Python-Template.md  Quick-Start.md
example/: README.md  pyproject.toml
example/src/example_mcp/: __init__.py  server.py
template/: README.md  pyproject.toml
template/src/mcp_template/: __init__.py  server.py
