[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-template"
version = "0.1.0"
description = "可複製的 Python MCP（FastMCP）套版骨架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.24",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[project.scripts]
mcp-template = "mcp_template.server:main"

[tool.setuptools.packages.find]
where = ["src"]
